k8s-deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opencoze
  labels:
    name: opencoze
